[OPENAPI] before split M01
